--- a/public/ce/composed_without_slots/headline_select_ce.html
+++ b/public/ce/composed_without_slots/headline_select_ce.html
@@ -85,7 +85,7 @@
 			this.ctrl.updatedAttributeFromChild = function(e) {
 				let child = e.detail.child;
 				let attribute = e.detail.attribute;
-				that[attribute] = child[attribute];
+				that[attribute] = e.detail.newVal;
 			};
 
 			// this.ctrl.clearedselectfromchild = function(e) {
