--- a/public/ce/primary/input_ce.html
+++ b/public/ce/primary/input_ce.html
@@ -55,16 +55,12 @@
 
 
 			//local events initiated by parent
-			this.ctrl.clearFromParent = function(e) {
-				that.parent = e.detail.parent;
-				that.updateAttributeAndModel(e, that)
-			};
 
 
 			//local events initiated by model
-			this.ctrl.updatedModel = function(e) {
-				that.updateViewAndParentAttribute(e, that, that.parent);
-			};
+			// this.ctrl.updatedModel = function(e) {
+			// 	that.updateViewAndParentAttribute(e, that, that.parent);
+			// };
 
 
 
@@ -107,12 +103,12 @@
 					case 'value':
 						oldVal = db.value;
 						db.value = newVal;
-						eventDispatcher(that.eventTarget, 'updatedmodel', {name: 'value', oldVal: oldVal, newVal: db.value});
+						eventDispatcher(that.eventTarget, 'updatedmodel', {parent: that.parent, child: that, name: 'value', oldVal: oldVal, newVal: db.value});
 						break;
 					case 'placeholder':
 						oldVal = db.placeholder;
 						db.placeholder = newVal;
-						eventDispatcher(that.eventTarget, 'updatedmodel', {name: 'placeholder', oldVal: oldVal, newVal: db.placeholder});
+						eventDispatcher(that.eventTarget, 'updatedmodel', {parent: that.parent, child: that, name: 'placeholder', oldVal: oldVal, newVal: db.placeholder});
 						break;
 				} 	
 			};
