--- a/public/ce/composed_with_slots/section_input_ce.html
+++ b/public/ce/composed_with_slots/section_input_ce.html
@@ -99,7 +99,7 @@
 			this.extend();
 		}
 
-		extendCtrl(that) {
+		extendCtrl(that, model, view) {
 			//local
 			this.ctrl.run = function() {
 			};
@@ -113,7 +113,7 @@
 			}
 		}
 		
-		extendView(that) {
+		extendView(that, model) {
 
 		}
 
