--- a/public/ce/composed_with_slots/section_output_ce.html
+++ b/public/ce/composed_with_slots/section_output_ce.html
@@ -58,7 +58,7 @@
 			this.extend();
 		}
 
-		extendCtrl(that) {
+		extendCtrl(that, model, view) {
 			//local
 			this.ctrl.run = function() {
 			};
@@ -75,7 +75,7 @@
 			}
 		}
 
-		extendView(that) {
+		extendView(that, model) {
 			
 		}		
 
