--- a/public/ce/composed_with_slots/anykind_container_ce.html
+++ b/public/ce/composed_with_slots/anykind_container_ce.html
@@ -51,7 +51,7 @@
 			this.extend();
 		}
 
-		extendCtrl(that) {
+		extendCtrl(that, model, view) {
 			//local
 			this.ctrl.run = function() {
 			};
@@ -66,7 +66,7 @@
 		}
 
 				
-		extendView(that) {
+		extendView(that, model) {
 
 		}
 
