--- a/public/index.html
+++ b/public/index.html
@@ -59,8 +59,44 @@
   
 </head>
 <body>
+<div id="buttonbox">
+    <button id="knappen">Dubbelklicka!</button>
+    <button id="knappen2">Dubbelklicka!</button>
+    <input id="receiver" value="" placeholder="hej"></input>
+    <input id="sender1" value="3" placeholder="hå"></input>
+    <input id="sender2" value="3" placeholder="hå"></input>
+</div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
 <section-input-ce listener="cleargeneralinputsection@clearanykindcontainers">
     <headline-ce title="Allmänt" id="mainheadline" class="h1 text-info" slot="anyheadline"></headline-ce>
     <button-ce value="Rensa" toggle id="clearbutton" class="btn btn-secondary" dispatch="cleargeneralinputsection" slot="anybutton" sb="clearbutton1:click"></button-ce>
@@ -141,7 +177,7 @@
 </div>
 
 <select-ce selectedindex></select-ce>
-    
+     -->
 <!-- 
     <section-input-ce listener="clearrentinputsection@clearsection">
             <headline-ce title="Hyra" id="mainheadline" class="h1 text-info" slot="anyheadline"></headline-ce>
