Excel functionality working

--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,13 @@
 <div id="buttonbox">
     <button id="knappen">Dubbelklicka!</button>
     <button id="knappen2">Dubbelklicka!</button>
-    <input id="receiver" value="" placeholder="hej"></input>
-    <input id="sender1" value="3" placeholder="hå"></input>
-    <input id="sender2" value="3" placeholder="hå"></input>
+    <input id="receiver" value="" placeholder="hej" style="outline:none" year="0"></input>
+    <input id="sender1" value="3" placeholder="hå" style="outline:none" year="1"></input>
+    <input id="sender2" value="3" placeholder="hå" style="outline:none" year="2"></input>
+    <input id="sender3" value="3" placeholder="hå" style="outline:none" year="3"></input>
+    <input id="sender4" value="3" placeholder="hå" style="outline:none" year="4"></input>
+    <input id="sender5" value="3" placeholder="hå" style="outline:none" year="5"></input>
+    <input id="sender6" value="3" placeholder="hå" style="outline:none" year="6"></input>
 </div>
 
 
