excel examples working

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
   
 </head>
 <body>
-<div id="buttonbox">
+<!-- <div id="buttonbox">
     <button id="knappen">Dubbelklicka!</button>
     <button id="knappen2">Dubbelklicka!</button>
     <input id="receiver" value="" placeholder="hej" style="outline:none" year="0"></input>
@@ -69,6 +69,48 @@
     <input id="sender4" value="3" placeholder="hå" style="outline:none" year="4"></input>
     <input id="sender5" value="3" placeholder="hå" style="outline:none" year="5"></input>
     <input id="sender6" value="3" placeholder="hå" style="outline:none" year="6"></input>
+</div> -->
+
+<div id="row0">
+    <input class="receiver" value="" placeholder="" style="outline:none" year="0"></input>
+    <input class="sender" value="Year 1" placeholder="hå" style="outline:none" year="1"></input>
+    <input class="sender" value="Year 2" placeholder="hå" style="outline:none" year="2"></input>
+    <input class="sender" value="Year 3" placeholder="hå" style="outline:none" year="3"></input>
+    <input class="sender" value="Year 4" placeholder="hå" style="outline:none" year="4"></input>
+    <input class="sender" value="Year 5" placeholder="hå" style="outline:none" year="5"></input>
+    <input class="sender" value="Year 6" placeholder="hå" style="outline:none" year="6"></input>
+</div>
+
+<div id="row1">
+    <input class="receiver" value="" placeholder="hej" style="outline:none" year="0"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="1"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="2"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="3"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="4"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="5"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="6"></input>
+</div>
+
+<div id="row2">
+    <input class="receiver" value="" placeholder="hej" style="outline:none" year="0"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="1"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="2"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="3"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="4"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="5"></input>
+    <input class="sender" value="3" placeholder="hå" style="outline:none" year="6"></input>
+</div>
+
+
+<div id="row3">
+    <input class="sender1" value="10" placeholder="hej" style="outline:none" year="0"></input>
+    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="1"></input>
+    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="2"></input>
+    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="3"></input>
+    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="4"></input>
+    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="5"></input>
+    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="6"></input>
+    <input class="sender2" value="0.05" placeholder="hej" style="outline:none" year="0"></input>
 </div>
 
 
