--- a/public/ce/primary/input_ce.html
+++ b/public/ce/primary/input_ce.html
@@ -3,13 +3,15 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	<style>
-
-		
+		/* #wrapper {
+			display: inline-block;
+		}
+		 */
 
 	</style>
 	
 	<!-- <input type="text"></input> -->
-	<div class="input-group input-group-sm mb-3">
+	<div id="wrapper" class="input-group input-group-sm mb-3">
 		<input id="input" type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
 	  </div>
 
@@ -33,7 +35,7 @@
 
 
 		static get observedAttributes() {
-            return ['value', 'placeholder'];
+            return ['value', 'placeholder', 'year'];
         };
 
 
@@ -50,6 +52,15 @@
 					let attribute = 'placeholder';
 					view.updateView(attribute, that.placeholder);
 				}
+
+				const element$ = function(element) {
+					return Rx.Observable.merge(Rx.Observable.of(element), Rx.Observable.fromEvent(element, 'blur').map(x => x.target), Rx.Observable.fromEvent(element, 'click').map(x => x.target), Rx.Observable.fromEvent(element, 'keyup').filter(x => x.keyCode == 13).map(x => x.target));
+				};
+
+				element$(that)
+				.map(element => element.value)
+				//.subscribe(console.log);
+				.subscribe(myRxmq.channel('water').subject('cost'));
 			};
 
 
