--- a/public/index.html
+++ b/public/index.html
@@ -105,14 +105,14 @@
 
 
 <div id="row3">
-    <input-ce class="sender1" value="10" placeholder="hej" style="outline:none" year="0"></input-ce>
-    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="1"></input>
-    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="2"></input>
-    <input class="receiver" value="3" placeholder="hå" style="outline:none" year="3"></input>
+    <input-ce class="sender1" value="10" placeholder="hej" style="outline:none" year="0" sb="water:amount"></input-ce>
+    <headline-input-ce class="receiver" title="Year 1" value="3" placeholder="hå" style="outline:none" year="1" sr="water:@capitalize$"></headline-input-ce>
+    <headline-input-ce class="receiver" title="Year 2" placeholder="hå" style="outline:none" year="2" sr="water:@capitalize$"></headline-input-ce>
+    <headline-input-ce class="receiver" title="Year 3" value="3" placeholder="hå" style="outline:none" year="3" sr="water:@capitalize$"></headline-input-ce>
     <input class="receiver" value="3" placeholder="hå" style="outline:none" year="4"></input>
     <input class="receiver" value="3" placeholder="hå" style="outline:none" year="5"></input>
     <input class="receiver" value="3" placeholder="hå" style="outline:none" year="6"></input>
-    <input class="sender2" value="0.05" placeholder="hej" style="outline:none" year="0"></input>
+    <input-ce class="sender2" value="0.05" placeholder="hej" style="outline:none" year="0" sb="water:increase"></input-ce>
 </div>
 
 
